gfs2-utils: Fail to configure if flex is not found
We require flex to build so the configure script should not succeed if
flex is not installed. We use flex-specific features so check for flex
specifically.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -58,6 +58,7 @@ AC_PROG_LN_S
 AC_PROG_INSTALL
 AC_PROG_MAKE_SET
 AC_PROG_LEX
+test "$LEX" != "flex" && AC_MSG_ERROR([flex not found])
 AC_CHECK_PROG([YACC], [bison], [bison -y])
 test x"$YACC" = x && AC_MSG_ERROR([bison not found])
 
