libgfs2: Remove debug field from gfs2_sbd
The utils were using the debug field to store their debug printing
options.  Hide the debug field in a libgfs2-internal header to allow
switching on libgfs2 debugging output separately and switch the apps to
use their own debug options. In cases where apps were using sdp->debug
but not actually setting it, remove the code which depends on it being
set.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/libgfs2/Makefile.am
+++ b/gfs2/libgfs2/Makefile.am
@@ -5,14 +5,14 @@ BUILT_SOURCES		= parser.h lexer.h
 AM_LFLAGS		= --header-file=lexer.h
 AM_YFLAGS		= -d
 
-noinst_HEADERS		= libgfs2.h lang.h
+noinst_HEADERS		= libgfs2.h lang.h config.h
 
 noinst_LTLIBRARIES	= libgfs2.la
 
 noinst_PROGRAMS		= gfs2l
 
 libgfs2_la_SOURCES	= block_list.c fs_bits.c gfs1.c misc.c rgrp.c super.c \
-			  buf.c fs_geometry.c gfs2_disk_hash.c ondisk.c \
+			  buf.c fs_geometry.c gfs2_disk_hash.c ondisk.c config.c \
 			  device_geometry.c fs_ops.c gfs2_log.c recovery.c \
 			  structures.c meta.c lang.c parser.y lexer.l
 
