libgfs2: Remove logging API
libgfs2 was exposing a logging API (log_info, etc.) but wasn't using it
itself. Remove the logging bits and move them into
gfs2/include/logging.h

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/libgfs2/Makefile.am
+++ b/gfs2/libgfs2/Makefile.am
@@ -13,7 +13,7 @@ noinst_PROGRAMS		= gfs2l
 
 libgfs2_la_SOURCES	= block_list.c fs_bits.c gfs1.c misc.c rgrp.c super.c \
 			  buf.c fs_geometry.c gfs2_disk_hash.c ondisk.c config.c \
-			  device_geometry.c fs_ops.c gfs2_log.c recovery.c \
+			  device_geometry.c fs_ops.c recovery.c \
 			  structures.c meta.c lang.c parser.y lexer.l
 
 libgfs2_la_CPPFLAGS	= -D_FILE_OFFSET_BITS=64 \
