tests: Add unit tests for the new extent search functions
The rbm search functions added by the previous commit added a certain
amount of complexity. These unit tests go a long way to making sure
they're doing what they're meant to do, and also demonstrate how the new
rgrp functions work without any i/o required.

The unit test sources have also been reorganised to match the names of
the libgfs2 source files they test.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,8 @@ gfs2/fsck/fsck.gfs2
 gfs2/mkfs/mkfs.gfs2
 gfs2/tune/tunegfs2
 test-driver
-tests/check_libgfs2
+tests/check_meta
+tests/check_rgrp
 tests/testvol
 tests/testsuite.log
 tests/testsuite.dir
