gfs2-utils tests: Build unit tests with consistent cpp flags
The check_rgrp unit test was failing on ARM and s390 due to struct
gfs2_sbd having a different alignment from libgfs2. This was due to the
unit tests being built with different options to libgfs2. Fix up the
unit test CPPFLAGS to make sure the alignment is consistent.

Also bump the test timeout for check_rgrp to make sure it completes on
slower build machines.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -15,16 +15,22 @@ UNIT_CFLAGS = \
 UNIT_LDADD = \
 	$(top_builddir)/gfs2/libgfs2/libgfs2.la \
 	@check_LIBS@
+UNIT_CPPFLAGS = \
+	-D_FILE_OFFSET_BITS=64 \
+	-D_LARGEFILE64_SOURCE \
+	-D_GNU_SOURCE
 
 check_PROGRAMS = $(UNIT_TESTS)
 
 check_meta_SOURCES = $(UNIT_SOURCES) check_meta.c
 check_meta_CFLAGS = $(UNIT_CFLAGS)
 check_meta_LDADD = $(UNIT_LDADD)
+check_meta_CPPFLAGS = $(UNIT_CPPFLAGS)
 
 check_rgrp_SOURCES = $(UNIT_SOURCES) check_rgrp.c
 check_rgrp_CFLAGS = $(UNIT_CFLAGS)
 check_rgrp_LDADD = $(UNIT_LDADD)
+check_rgrp_CPPFLAGS = $(UNIT_CPPFLAGS)
 endif
 
 # The `:;' works around a Bash 3.2 bug when the output is not writable.
