gfs2-utils configure: Fix exit with failure condition
When gcov is disabled, the test at the end of the configure script would
cause the script to exit with status 1 despite succeeding. Restructure
the test to make sure its exit status is consumed in an if statement.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -234,5 +234,9 @@ AC_CONFIG_FILES([Makefile
 
 AC_OUTPUT
 
-test x"$have_check" = "xyes" || AC_MSG_NOTICE([package 'check' not found; unit tests will not be built])
-test x"${enable_gcov}" = "xyes" && AC_MSG_NOTICE([code coverage enabled; optimization will be disabled])
+if test x"${have_check}" != "xyes"; then
+	AC_MSG_NOTICE([package 'check' not found; unit tests will not be built])
+fi
+if test x"${enable_gcov}" = "xyes"; then
+	AC_MSG_NOTICE([code coverage enabled; optimization will be disabled])
+fi
