Build gfs2_grow, gfs2_jadd and mkfs.gfs2 separately
Previously gfs2_jadd and gfs2_grow were just symlinks to mkfs.gfs2
created on installation, and mkfs.gfs2's main() function called the
appropriate main_* function depending on argv[0]. This had many
drawbacks:

- The lack of separate binaries complicated build testing and manual
  linking was needed
- A perl snippet was needed to find the relative path to the mkfs.gfs2
  binary on installation, making gfs2-utils build-dependent on perl
- This approach actually required more lines of code as the amount of
  shared code was minimal
- It meant copying mkfs.gfs2 to, say, mkfs.gfs2.old caused it to die
  with "Unknown mode"

This patch removes mkfs/main.c and gives each tool its own main(),
adding back locale setup code and #includes where needed. It also
removes the perl dependency and gives each tool its build target. The
above drawbacks are now solved, with the only overhead being a slightly
increased installed size. The tools can easily share more code in
future, but sharing main() is not the right way to do that.

Some code has been removed from Makefile.am in order to honour the
configure script's --sbindir option. An obsolete mkfs/README is also
removed.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ gfs2/libgfs2/lexer.c
 gfs2/libgfs2/lexer.h
 gfs2/fsck/fsck.gfs2
 gfs2/mkfs/mkfs.gfs2
+gfs2/mkfs/gfs2_grow
+gfs2/mkfs/gfs2_jadd
 gfs2/tune/tunegfs2
 test-driver
 tests/check_meta
