gfs2-utils: Tidy up Makefile.am files
Reorganise the Makefile.am files for ease of maintenance.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/Makefile.am
+++ b/gfs2/Makefile.am
@@ -1,4 +1,12 @@
-MAINTAINERCLEANFILES	= Makefile.in
+MAINTAINERCLEANFILES = Makefile.in
 
-SUBDIRS			= libgfs2 convert edit fsck mkfs man \
-			  tune include scripts #init.d
+SUBDIRS = \
+	include \
+	libgfs2 \
+	convert \
+	edit \
+	fsck \
+	mkfs \
+	man \
+	tune \
+	scripts
