--- a/gfs2/mkfs/Makefile.am
+++ b/gfs2/mkfs/Makefile.am
@@ -7,9 +7,14 @@ COMMON_CPPFLAGS = \
 	-I$(top_srcdir)/gfs2/include \
 	-I$(top_srcdir)/gfs2/libgfs2
 
-sbin_PROGRAMS = mkfs.gfs2 gfs2_jadd gfs2_grow
+sbin_PROGRAMS = \
+	mkfs.gfs2 \
+	gfs2_jadd \
+	gfs2_grow
 
-noinst_HEADERS = gfs2_mkfs.h metafs.h
+noinst_HEADERS = \
+	gfs2_mkfs.h \
+	metafs.h
 
 mkfs_gfs2_SOURCES = main_mkfs.c
 mkfs_gfs2_CPPFLAGS = $(COMMON_CPPFLAGS)
@@ -17,13 +22,19 @@ mkfs_gfs2_CFLAGS = $(blkid_CFLAGS)
 mkfs_gfs2_LDFLAGS = $(blkid_LIBS)
 mkfs_gfs2_LDADD	= $(top_builddir)/gfs2/libgfs2/libgfs2.la
 
-gfs2_grow_SOURCES = main_grow.c metafs.c
+gfs2_grow_SOURCES = \
+	main_grow.c \
+	metafs.c
+
 gfs2_grow_CPPFLAGS = $(COMMON_CPPFLAGS)
 gfs2_grow_CFLAGS = $(blkid_CFLAGS)
 gfs2_grow_LDFLAGS = $(blkid_LIBS)
 gfs2_grow_LDADD = $(top_builddir)/gfs2/libgfs2/libgfs2.la
 
-gfs2_jadd_SOURCES = main_jadd.c metafs.c
+gfs2_jadd_SOURCES = \
+	main_jadd.c \
+	metafs.c
+
 gfs2_jadd_CPPFLAGS = $(COMMON_CPPFLAGS)
 gfs2_jadd_LDADD = $(top_builddir)/gfs2/libgfs2/libgfs2.la
 
