--- a/gfs2/scripts/Makefile.am
+++ b/gfs2/scripts/Makefile.am
@@ -1,3 +1,5 @@
-MAINTAINERCLEANFILES    = Makefile.in
+MAINTAINERCLEANFILES = Makefile.in
 
-dist_sbin_SCRIPTS           = gfs2_lockcapture gfs2_trace
+dist_sbin_SCRIPTS = \
+	gfs2_lockcapture \
+	gfs2_trace
