--- a/gfs2/include/Makefile.am
+++ b/gfs2/include/Makefile.am
@@ -1,3 +1,7 @@
-MAINTAINERCLEANFILES	= Makefile.in
+MAINTAINERCLEANFILES = Makefile.in
 
-noinst_HEADERS		= osi_list.h osi_tree.h linux_endian.h logging.h
+noinst_HEADERS = \
+	osi_list.h \
+	osi_tree.h \
+	linux_endian.h \
+	logging.h
