--- a/gfs2/libgfs2/Makefile.am
+++ b/gfs2/libgfs2/Makefile.am
@@ -1,29 +1,60 @@
-MAINTAINERCLEANFILES	= Makefile.in
+MAINTAINERCLEANFILES = Makefile.in
 
-CLEANFILES		= parser.h parser.c lexer.c lexer.h
-BUILT_SOURCES		= parser.h lexer.h
-AM_LFLAGS		= --header-file=lexer.h
-AM_YFLAGS		= -d
+CLEANFILES = \
+	parser.h \
+	parser.c \
+	lexer.c \
+	lexer.h
 
-noinst_HEADERS		= libgfs2.h lang.h config.h rgrp.h
+BUILT_SOURCES = \
+	parser.h \
+	lexer.h
 
-noinst_LTLIBRARIES	= libgfs2.la
+AM_LFLAGS = --header-file=lexer.h
+AM_YFLAGS = -d
 
-noinst_PROGRAMS		= gfs2l
+noinst_HEADERS = \
+	libgfs2.h \
+	lang.h \
+	config.h \
+	rgrp.h
 
-libgfs2_la_SOURCES	= block_list.c fs_bits.c gfs1.c misc.c rgrp.c super.c \
-			  buf.c fs_geometry.c gfs2_disk_hash.c ondisk.c config.c \
-			  device_geometry.c fs_ops.c recovery.c \
-			  structures.c meta.c lang.c parser.y lexer.l
+noinst_LTLIBRARIES = libgfs2.la
 
-libgfs2_la_CPPFLAGS	= -D_FILE_OFFSET_BITS=64 \
-			  -D_LARGEFILE64_SOURCE \
-			  -D_GNU_SOURCE \
-			  -I$(top_srcdir)/gfs2/include
+noinst_PROGRAMS = gfs2l
 
-gfs2l_SOURCES		= gfs2l.c
-gfs2l_CPPFLAGS		= -I$(top_srcdir)/gfs2/include -D_FILE_OFFSET_BITS=64
-gfs2l_LDADD		= libgfs2.la
+libgfs2_la_SOURCES = \
+	block_list.c \
+	fs_bits.c \
+	gfs1.c \
+	misc.c \
+	rgrp.c \
+	super.c \
+	buf.c \
+	fs_geometry.c \
+	gfs2_disk_hash.c \
+	ondisk.c \
+	config.c \
+	device_geometry.c \
+	fs_ops.c \
+	recovery.c \
+	structures.c \
+	meta.c \
+	lang.c \
+	parser.y \
+	lexer.l
+
+libgfs2_la_CPPFLAGS = \
+	-D_FILE_OFFSET_BITS=64 \
+	-D_LARGEFILE64_SOURCE \
+	-D_GNU_SOURCE \
+	-I$(top_srcdir)/gfs2/include
+
+gfs2l_SOURCES = gfs2l.c
+gfs2l_LDADD = libgfs2.la
+gfs2l_CPPFLAGS = \
+	-I$(top_srcdir)/gfs2/include \
+	-D_FILE_OFFSET_BITS=64
 
 # Autotools can't handle header files output by flex so we have to generate it manually
 lexer.h: lexer.l
