--- a/gfs2/man/Makefile.am
+++ b/gfs2/man/Makefile.am
@@ -1,12 +1,13 @@
-MAINTAINERCLEANFILES	= Makefile.in
+MAINTAINERCLEANFILES = Makefile.in
 
-dist_man_MANS		= fsck.gfs2.8 \
-			  gfs2.5 \
-			  gfs2_convert.8 \
-			  gfs2_edit.8 \
-			  gfs2_grow.8 \
-			  gfs2_jadd.8 \
-			  mkfs.gfs2.8 \
-			  tunegfs2.8 \
-			  gfs2_lockcapture.8 \
-			  gfs2_trace.8
+dist_man_MANS = \
+	fsck.gfs2.8 \
+	gfs2.5 \
+	gfs2_convert.8 \
+	gfs2_edit.8 \
+	gfs2_grow.8 \
+	gfs2_jadd.8 \
+	mkfs.gfs2.8 \
+	tunegfs2.8 \
+	gfs2_lockcapture.8 \
+	gfs2_trace.8
