--- a/gfs2/tune/Makefile.am
+++ b/gfs2/tune/Makefile.am
@@ -1,11 +1,14 @@
-MAINTAINERCLEANFILES	= Makefile.in
+MAINTAINERCLEANFILES = Makefile.in
 
-sbin_PROGRAMS		= tunegfs2
+sbin_PROGRAMS = tunegfs2
 
-noinst_HEADERS		= tunegfs2.h
+noinst_HEADERS = tunegfs2.h
 
-tunegfs2_SOURCES	= main.c super.c
+tunegfs2_SOURCES = \
+	main.c \
+	super.c
 
-tunegfs2_CPPFLAGS	= -D_FILE_OFFSET_BITS=64 -DHELPER_PROGRAM \
-			  -I$(top_srcdir)/gfs2/include \
-			  -I$(top_srcdir)/group/include
+tunegfs2_CPPFLAGS = \
+	-D_FILE_OFFSET_BITS=64 \
+	-I$(top_srcdir)/gfs2/include \
+	-I$(top_srcdir)/group/include
