gfs2-utils: Fix hang on withdraw
Issuing a withdraw on a gfs2 filesystem causes a hang. When
gfs_controld was removed, the userspace functionality that
completes a withdraw operation went away. This causes gfs2
kernel to hang waiting for a withdraw completion ack from
userspace.

This patchset introduces a uevent-based shell script to do
the job that gfs_controld used to do on withdraw. An 'offline'
uevent triggers the execution of this script. This script
suspends the device associated with the filesystem and signals
a completed withdraw to the kernel.

Resolves: rhbz#1225634
Signed-off-by: Abhi Das <adas@redhat.com>

--- a/gfs2/scripts/Makefile.am
+++ b/gfs2/scripts/Makefile.am
@@ -3,3 +3,8 @@ MAINTAINERCLEANFILES = Makefile.in
 dist_sbin_SCRIPTS = \
 	gfs2_lockcapture \
 	gfs2_trace
+
+noinst_SCRIPTS = \
+	82-gfs2-withdraw.rules \
+	gfs2_wd_udev.sh
+
