scripts: install the withdraw helper script
Install gfs2_withdraw_helper into /usr/sbin in 'make install'.

Resolves: rhbz#1225634
Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/scripts/Makefile.am
+++ b/gfs2/scripts/Makefile.am
@@ -2,9 +2,9 @@ MAINTAINERCLEANFILES = Makefile.in
 
 dist_sbin_SCRIPTS = \
 	gfs2_lockcapture \
-	gfs2_trace
+	gfs2_trace \
+	gfs2_withdraw_helper
 
 noinst_SCRIPTS = \
-	82-gfs2-withdraw.rules \
-	gfs2_withdraw_helper
+	82-gfs2-withdraw.rules
 
