mkfs.gfs2: Add a progress indicator to mkfs.gfs2
Add a progress indicator to mkfs based on an adapted version of
the simple progress indicator used in e2fsprogs.

Update mkfs.gfs2 to make use of this progress bar allowing progress
to be reported during the creation of journals and resource groups
during filesystem creation.

Signed-off-by: Paul Evans <pevans@redhat.com>

--- a/gfs2/mkfs/Makefile.am
+++ b/gfs2/mkfs/Makefile.am
@@ -16,7 +16,11 @@ noinst_HEADERS = \
 	gfs2_mkfs.h \
 	metafs.h
 
-mkfs_gfs2_SOURCES = main_mkfs.c
+mkfs_gfs2_SOURCES = \
+	main_mkfs.c \
+	progress.c \
+	progress.h
+
 mkfs_gfs2_CPPFLAGS = $(COMMON_CPPFLAGS)
 mkfs_gfs2_CFLAGS = $(blkid_CFLAGS)
 mkfs_gfs2_LDFLAGS = $(blkid_LIBS)
