fsck.gfs2: Separate out functions that may only be done after pass1
This patch adds a new header file and source file which has the
purpose of separating out the functions that may only be called
after pass1 from the functions that pass1 may call. This is to
ensure that there will never be inconsistencies between blockmap
(which pass1 uses) and bitmap (which subsequent passes use).

Signed-off-by: Bob Peterson <rpeterso@redhat.com>

--- a/gfs2/fsck/Makefile.am
+++ b/gfs2/fsck/Makefile.am
@@ -3,6 +3,7 @@ MAINTAINERCLEANFILES = Makefile.in
 sbin_PROGRAMS = fsck.gfs2
 
 noinst_HEADERS = \
+	afterpass1_common.h \
 	fsck.h \
 	fs_recovery.h \
 	inode_hash.h \
@@ -19,6 +20,7 @@ fsck_gfs2_SOURCES = \
 	lost_n_found.c \
 	main.c \
 	metawalk.c \
+	afterpass1_common.c \
 	pass1b.c \
 	pass1.c \
 	pass2.c \
