gfs2-utils: Use libuuid for uuid handling
Use libuuid to generate, parse, to-string and copy uuids when the
sb_uuid field is available. This allows seven custom uuid-related
functions to be removed.

Also add some missing #ifdef GFS2_HAS_UUID guards which fixes building
against a gfs2_ondisk.h without sb_uuid.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/edit/Makefile.am
+++ b/gfs2/edit/Makefile.am
@@ -22,10 +22,12 @@ gfs2_edit_CPPFLAGS = \
 
 gfs2_edit_CFLAGS = \
 	$(ncurses_CFLAGS) \
-	$(zlib_CFLAGS)
+	$(zlib_CFLAGS) \
+	$(uuid_CFLAGS)
 
 gfs2_edit_LDFLAGS = \
 	$(ncurses_LIBS) \
-	$(zlib_LIBS)
+	$(zlib_LIBS) \
+	$(uuid_LIBS)
 
 gfs2_edit_LDADD = $(top_builddir)/gfs2/libgfs2/libgfs2.la
