gfs2-utils: Add fscan
Add Steve Whitehouse's experimental fscan program/framework which is
intended to be the base for a possible new design of fsck.gfs2 that
tries to maximize i/o throughput from the outset.

Tweaks added to the original code to use libaio and the existing device
limits gathering code and byteswapping macros in libgfs2, along with
some general tidying.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ gfs2/libgfs2/parser.h
 gfs2/libgfs2/lexer.c
 gfs2/libgfs2/lexer.h
 gfs2/fsck/fsck.gfs2
+gfs2/fsck/fscan
 gfs2/glocktop/glocktop
 gfs2/mkfs/mkfs.gfs2
 gfs2/mkfs/gfs2_grow
