Add basic support for v2 log headers
mkfs.gfs2 now writes v2 log headers, fsck.gfs2 checks the crc as well as
the hash, gfs2_edit includes the new fields when printing log blocks and
gfs2_jadd now writes v2 log headers.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/libgfs2/Makefile.am
+++ b/gfs2/libgfs2/Makefile.am
@@ -15,6 +15,7 @@ AM_YFLAGS = -d
 
 noinst_HEADERS = \
 	libgfs2.h \
+	crc32c.h \
 	lang.h \
 	config.h \
 	rgrp.h
@@ -24,6 +25,7 @@ noinst_LTLIBRARIES = libgfs2.la
 noinst_PROGRAMS = gfs2l
 
 libgfs2_la_SOURCES = \
+	crc32c.c \
 	block_list.c \
 	fs_bits.c \
 	gfs1.c \
