tests: Add rg test scripts to EXTRA_DIST
Fixes out-of-tree built tests.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,5 +1,10 @@
+TESTSCRIPTS = \
+	rgrifieldscheck.sh \
+	rgskipcheck.sh
+
 EXTRA_DIST = \
 	$(TESTSUITE_AT) \
+	$(TESTSCRIPTS) \
 	package.m4 \
 	atlocal \
 	atconfig
