scripts: Install gfs2_withdraw_helper into $libexecdir
This is a more appropriate location as the helper script isn't meant to
be run by users. It also means that various checkers will stop
complaining that there is no man page for this script.

The 82-gfs2-withdraw.rules udev hook is now generated from the .in file
so that $libexecdir can be substituted into it. The path can be set at
configure time.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/scripts/Makefile.am
+++ b/gfs2/scripts/Makefile.am
@@ -1,10 +1,17 @@
 MAINTAINERCLEANFILES = Makefile.in
+CLEANFILES = 82-gfs2-withdraw.rules
+EXTRA_DIST = 82-gfs2-withdraw.rules.in
 
 dist_sbin_SCRIPTS = \
 	gfs2_lockcapture \
-	gfs2_trace \
+	gfs2_trace
+
+dist_libexec_SCRIPTS = \
 	gfs2_withdraw_helper
 
+82-gfs2-withdraw.rules: 82-gfs2-withdraw.rules.in
+	sed -e 's,[@]libexecdir[@],$(libexecdir),g' $< > $@
+
 udevrulesdir=@udevdir@/rules.d
-dist_udevrules_DATA = \
+udevrules_DATA = \
 	82-gfs2-withdraw.rules
