configure: Show $libexecdir in configure summary
Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -250,6 +250,7 @@ echo " ==================="
 echo " prefix            : $prefix"
 echo " exec_prefix       : $exec_prefix"
 echo " libdir            : $libdir"
+echo " libexecdir        : $libexecdir"
 echo " sbindir           : $sbindir"
 echo " udevdir           : $udevdir"
 echo " ------------------"
