Fix libuuid linking
Fixes a build failure in Rawhide.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/libgfs2/Makefile.am
+++ b/gfs2/libgfs2/Makefile.am
@@ -54,8 +54,9 @@ libgfs2_la_CPPFLAGS = \
 	$(uuid_CFLAGS)
 
 gfs2l_SOURCES = gfs2l.c
-gfs2l_LDADD = libgfs2.la
-gfs2l_LDFLAGS = $(uuid_LIBS)
+gfs2l_LDADD = \
+	libgfs2.la \
+	$(uuid_LIBS)
 gfs2l_CPPFLAGS = \
 	-I$(top_srcdir)/gfs2/include \
 	-D_FILE_OFFSET_BITS=64
