--- a/gfs2/fsck/Makefile.am
+++ b/gfs2/fsck/Makefile.am
@@ -36,6 +36,5 @@ fsck_gfs2_CPPFLAGS = \
 	-I$(top_srcdir)/gfs2/libgfs2
 
 fsck_gfs2_LDADD = \
-	$(top_builddir)/gfs2/libgfs2/libgfs2.la
-fsck_gfs2_LDFLAGS = \
+	$(top_builddir)/gfs2/libgfs2/libgfs2.la \
 	$(uuid_LIBS)
