--- a/gfs2/glocktop/Makefile.am
+++ b/gfs2/glocktop/Makefile.am
@@ -9,10 +9,6 @@ glocktop_SOURCES = \
 glocktop_CFLAGS = \
 	$(ncurses_CFLAGS)
 
-glocktop_LDFLAGS = \
-	$(ncurses_LIBS) \
-	$(uuid_LIBS)
-
 glocktop_CPPFLAGS = \
 	-D_FILE_OFFSET_BITS=64 \
 	-D_LARGEFILE64_SOURCE \
@@ -21,4 +17,6 @@ glocktop_CPPFLAGS = \
 	-I$(top_srcdir)/gfs2/libgfs2
 
 glocktop_LDADD = \
-	$(top_builddir)/gfs2/libgfs2/libgfs2.la
+	$(top_builddir)/gfs2/libgfs2/libgfs2.la \
+	$(ncurses_LIBS) \
+	$(uuid_LIBS)
