--- a/gfs2/mkfs/Makefile.am
+++ b/gfs2/mkfs/Makefile.am
@@ -25,10 +25,10 @@ mkfs_gfs2_CPPFLAGS = $(COMMON_CPPFLAGS)
 mkfs_gfs2_CFLAGS = \
 	$(blkid_CFLAGS) \
 	$(uuid_CFLAGS)
-mkfs_gfs2_LDFLAGS = \
+mkfs_gfs2_LDADD	= \
+	$(top_builddir)/gfs2/libgfs2/libgfs2.la \
 	$(blkid_LIBS) \
 	$(uuid_LIBS)
-mkfs_gfs2_LDADD	= $(top_builddir)/gfs2/libgfs2/libgfs2.la
 
 gfs2_grow_SOURCES = \
 	main_grow.c \
@@ -36,16 +36,17 @@ gfs2_grow_SOURCES = \
 
 gfs2_grow_CPPFLAGS = $(COMMON_CPPFLAGS)
 gfs2_grow_CFLAGS = $(blkid_CFLAGS)
-gfs2_grow_LDFLAGS = \
+gfs2_grow_LDADD = \
+	$(top_builddir)/gfs2/libgfs2/libgfs2.la \
 	$(blkid_LIBS) \
 	$(uuid_LIBS)
-gfs2_grow_LDADD = $(top_builddir)/gfs2/libgfs2/libgfs2.la
 
 gfs2_jadd_SOURCES = \
 	main_jadd.c \
 	metafs.c
 
 gfs2_jadd_CPPFLAGS = $(COMMON_CPPFLAGS)
-gfs2_jadd_LDADD = $(top_builddir)/gfs2/libgfs2/libgfs2.la
-gfs2_jadd_LDFLAGS = $(uuid_LIBS)
+gfs2_jadd_LDADD = \
+	$(top_builddir)/gfs2/libgfs2/libgfs2.la \
+	$(uuid_LIBS)
 
