--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -26,8 +26,7 @@ nukerg_CFLAGS = \
 	-I$(top_srcdir)/gfs2/libgfs2 \
 	-I$(top_srcdir)/gfs2/include
 nukerg_LDADD = \
-	$(top_builddir)/gfs2/libgfs2/libgfs2.la
-nukerg_LDFLAGS = \
+	$(top_builddir)/gfs2/libgfs2/libgfs2.la \
 	$(uuid_LIBS)
 
 if HAVE_CHECK
@@ -54,16 +53,18 @@ check_meta_SOURCES = \
 	$(UNIT_SOURCES) \
 	check_meta.c
 check_meta_CFLAGS = $(UNIT_CFLAGS)
-check_meta_LDADD = $(UNIT_LDADD)
-check_meta_LDFLAGS = $(uuid_LIBS)
+check_meta_LDADD = \
+	$(UNIT_LDADD) \
+	$(uuid_LIBS)
 check_meta_CPPFLAGS = $(UNIT_CPPFLAGS)
 
 check_rgrp_SOURCES = \
 	$(UNIT_SOURCES) \
 	check_rgrp.c
 check_rgrp_CFLAGS = $(UNIT_CFLAGS)
-check_rgrp_LDADD = $(UNIT_LDADD)
-check_rgrp_LDFLAGS = $(uuid_LIBS)
+check_rgrp_LDADD = \
+	$(UNIT_LDADD) \
+	$(uuid_LIBS)
 check_rgrp_CPPFLAGS = $(UNIT_CPPFLAGS)
 endif
 
