restoremeta: Add bzip2 support
Implement the required functions for adding bzip2 support and add
functions for reading the initial chunk so that we can try each
compression method. gzip has to be tried last as zlib's read function
doesn't report if the file is not in gzip format, it just returns the
data as-is. Adds a dependency on libbzip2.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -104,6 +104,7 @@ PKG_CHECK_MODULES([check], [check >= 0.9.8],
 AM_CONDITIONAL([HAVE_CHECK], [test "x$have_check" = "xyes"])
 
 PKG_CHECK_MODULES([zlib],[zlib])
+PKG_CHECK_MODULES([bzip2],[bzip2])
 PKG_CHECK_MODULES([blkid],[blkid])
 PKG_CHECK_MODULES([uuid],[uuid],
                   [have_uuid=yes],
