--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ cscope.out
 *.o
 *.la
 *.lo
+*.trs
+*.log
 gfs2/convert/gfs2_convert
 gfs2/edit/gfs2_edit
 gfs2/libgfs2/gfs2l
@@ -38,6 +40,7 @@ gfs2/libgfs2/parser.c
 gfs2/libgfs2/parser.h
 gfs2/libgfs2/lexer.c
 gfs2/libgfs2/lexer.h
+gfs2/libgfs2/check_libgfs2
 gfs2/fsck/fsck.gfs2
 gfs2/glocktop/glocktop
 gfs2/mkfs/mkfs.gfs2
@@ -46,13 +49,9 @@ gfs2/mkfs/gfs2_jadd
 gfs2/scripts/82-gfs2-withdraw.rules
 gfs2/tune/tunegfs2
 test-driver
-tests/check_meta
-tests/check_rgrp
 tests/nukerg
 tests/testvol
-tests/testsuite.log
 tests/testsuite.dir
-tests/testsuite.trs
 tests/atconfig
 tests/atlocal
 tests/package.m4
