--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,9 @@ cscope.out
 *.trs
 *.log
 gfs2/convert/gfs2_convert
+gfs2/convert/check_convert
 gfs2/edit/gfs2_edit
+gfs2/edit/check_edit
 gfs2/libgfs2/gfs2l
 gfs2/libgfs2/parser.c
 gfs2/libgfs2/parser.h
@@ -42,12 +44,17 @@ gfs2/libgfs2/lexer.c
 gfs2/libgfs2/lexer.h
 gfs2/libgfs2/check_libgfs2
 gfs2/fsck/fsck.gfs2
+gfs2/fsck/check_fsck
 gfs2/glocktop/glocktop
 gfs2/mkfs/mkfs.gfs2
 gfs2/mkfs/gfs2_grow
 gfs2/mkfs/gfs2_jadd
+gfs2/mkfs/check_grow
+gfs2/mkfs/check_jadd
+gfs2/mkfs/check_mkfs
 gfs2/scripts/82-gfs2-withdraw.rules
 gfs2/tune/tunegfs2
+gfs2/tune/check_tune
 test-driver
 tests/nukerg
 tests/testvol
